--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
         crossorigin="anonymous">
+        <!-- <style>
+            img{
+                width: 10%;
+            }
+        </style> -->
 </head>
 
 <body>
@@ -17,7 +22,7 @@
         <h1 class="jumbotron">Search a Game that you want to find out more about it</h1>
     </header>
     <section class="container-fluid offset-md-1 col-md-10">
-        <form class="container-fluid offset-md-1 col-md-10"> 
+        <form class="container-fluid offset-md-1 col-md-10">
             <div class="form-group">
                 <label for="exampleInputName">Game Input</label>
                 <input type="Name" class="form-control" id="game-input" placeholder="Enter Game">
@@ -26,14 +31,21 @@
         </form>
     </section>
     <section class="container-fluid offset-md-1 col-md-10">
-        <div id="img">
-            <img class="container-fluid offset-md-1 col-sm-4" src="https://static-assets-prod.epicgames.com/fortnite/static/webpack/8704d4d5ffd1c315ac8e2c805a585764.jpg" alt="Fornite">
-        </div>
-        <div id="info">
-            <p class="offset-md-1 col-sm-6">Fortnite is an online video game first released in 2017 and developed by Epic Games. It is available as separate software packages having different game modes that otherwise share the same general gameplay and game engine</p>
-        </div>
-        <div id="buy">
-            <p class="offset-md-1 col-sm-6">Free on all platforms</p>
+        <div>
+            <div class="row">
+                <img id="fortnite" src="https://static-assets-prod.epicgames.com/fortnite/static/webpack/8704d4d5ffd1c315ac8e2c805a585764.jpg"
+                    alt="Fornite">
+
+                <!-- <div > -->
+                    <p id="info" class="offset-md-1 col-sm-6">Fortnite is an online video game first released in 2017 and developed by
+                        Epic Games. It is available as separate software packages having different game modes that
+                        otherwise
+                        share the same general gameplay and game engine</p>
+                <!-- </div> -->
+            </div>
+            <div id="buy">
+                <p class="offset-md-1 col-sm-6">Free on all platforms</p>
+            </div>
         </div>
     </section>
     <section class="container-fluid offset-md-1 col-md-">
