fixed image issue

--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
         crossorigin="anonymous">
-        <!-- <style>
-            img{
-                width: 10%;
-            }
-        </style> -->
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -33,15 +29,16 @@
     <section class="container-fluid offset-md-1 col-md-10">
         <div>
             <div class="row">
+                <div class="offset-md-1 col-sm-3">
                 <img id="fortnite" src="https://static-assets-prod.epicgames.com/fortnite/static/webpack/8704d4d5ffd1c315ac8e2c805a585764.jpg"
                     alt="Fornite">
-
-                <!-- <div > -->
-                    <p id="info" class="offset-md-1 col-sm-6">Fortnite is an online video game first released in 2017 and developed by
+                </div>
+                <div  class="offset-md-1 col-sm-7">
+                    <p id="info">Fortnite is an online video game first released in 2017 and developed by
                         Epic Games. It is available as separate software packages having different game modes that
                         otherwise
                         share the same general gameplay and game engine</p>
-                <!-- </div> -->
+                </div>
             </div>
             <div id="buy">
                 <p class="offset-md-1 col-sm-6">Free on all platforms</p>
