--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
     <script src="/assets/javascript/app.js"></script>
+        <!--Need to callout chartJS Library-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+        <!--Need to callout twitch API-->
+        <!--Need to callout IGDB API-->
+        <!---Make call to firebase-->
 </body>
 
 </html>
