Working buttons when clicked

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                 <label for="exampleInputName">Game Input</label>
                 <input type="Name" class="form-control" id="game-input" placeholder="Enter Game">
             </div>
-            <button type="submit" id="add-user" class="btn btn-primary">Submit</button>
+            <button type="submit" id="add-game" class="btn btn-primary">Submit</button>
         </form>
+        <div id="searchls"></div>
     </section>
     <section class="container-fluid offset-md-1 col-md-10">
         <div>
@@ -34,6 +35,7 @@
                     alt="Fornite">
                 </div>
                 <div  class="offset-md-1 col-sm-7">
+                    <h3 id="gName"></h3>
                     <p id="info">Fortnite is an online video game first released in 2017 and developed by
                         Epic Games. It is available as separate software packages having different game modes that
                         otherwise
