--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         share the same general gameplay and game engine</p>
                 </div>
             </div>
-            <div id="buy">
+            <!-- <div id="buy">
                 <p class="offset-md-1 col-sm-6">Free on all platforms</p>
-            </div>
+            </div> -->
         </div>
     </section>
     <section class="container-fluid offset-md-1 col-md-">
