--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <button type="submit" id="add-game" class="btn btn-primary">Submit</button>
         </form>
-        <div id="searchls"></div>
+        <div class="container-fluid offset-md-1 col-md-10" id="searchls"></div>
     </section>
     <section class="container-fluid offset-md-1 col-md-10">
         <div>
@@ -50,9 +50,9 @@
                 <p class="offset-md-1 col-sm-6">Free on all platforms</p>
             </div> -->
     </section>
-    <section class="container-fluid offset-md-1 col-md-">
+    <section class="container-fluid offset-md-1 col-md-10">
         <div id="livestreams">
-            <div>
+            <div class="container">
                 <iframe id="twitchVideo" src="" height="300" width="400" scrolling="no" allowfullscreen="true">
                 </iframe>
             </div>
