added firebase and chartJS

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         </form>
         <div class="container-fluid offset-md-1 col-md-10" id="searchls"></div>
     </section>
+    <section id="lastLookup">
+        <p>test</p>
+    </section>
     <section class="container-fluid offset-md-1 col-md-10">
         <div>
             <div class="row">
@@ -79,10 +82,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
     <!--Need to callout chartJS Library-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <!--Need to callout twitch API-->
     <!--Need to callout IGDB API-->
     <!---Make call to firebase-->
+    <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
+    <script src="/__/firebase/5.5.1/firebase-database.js"></script>
     <!-- particle bacground -->
     <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
     <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
