--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
     <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
     <script src='https://threejs.org/examples/js/libs/stats.min.js'></script>
+    <script src="assets/javascript/chartjs.js"></script>
     <script src="assets/javascript/particle.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
